@@ -122,5 +122,6 @@ int del_route (const char *ifname, struct in_addr destination,
 			   struct in_addr netmask, struct in_addr gateway, int metric);
 
 int inet_ntocidr (struct in_addr address);
+struct in_addr inet_cidrtoaddr (int cidr);
 
 #endif
